<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <!-- Vibrator -->
    <RelativeLayout
        android:id="@+id/rlyVibrator"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text"
            android:text="@string/vibrator"/>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchVibrator"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"/>

    <!-- MiniFan -->
    <RelativeLayout
        android:id="@+id/rlyMiniFan"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text"
            android:text="@string/mini_fan"/>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchMiniFan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"/>

    <!-- MiniFan -->
    <RelativeLayout
        android:id="@+id/rlyLight"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text"
            android:text="@string/red_light"/>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"/>

    <!-- Button -->
    <RelativeLayout
        android:id="@+id/rlyButton"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text"
            android:text="@string/button"/>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ToggleButton
                android:id="@+id/btnPushButton"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOn="@string/button_on"
                android:textOff="@string/button_off"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hint"/>

    <!-- Light Sensor -->
    <RelativeLayout
        android:id="@+id/rlyLightSensor"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/text"
            android:text="@string/light_sensor"/>

        <RelativeLayout
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_alignParentBottom="true"
                android:id="@+id/txtLightSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textColor="@color/text"
                android:textSize="12sp"
                android:text="@string/zero"/>

            <SeekBar
                android:layout_above="@+id/txtLightSensor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/seekBarLightSensor"
                android:layout_gravity="bottom"
                android:clickable="false"
                android:focusable="false"
                android:enabled="false"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>